--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,11 +4,44 @@
 
 <!-- let's add the form to our home.html page -->
 <!-- center the form in the middle of screen -->
-    <div class="col-md-6 offset-md-3">
+    <!-- <div class="col-md-6 offset-md-3"> -->
 
     {% if user.is_authenticated %}
+        <table class="table table-striped table-hover table-bordered table-responsive">
+            <thead class = "table-dark">
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Address</th>
+                <th scope="col">City</th>
+                <th scope="col">State</th>
+                <th scope="col">ZipCode</th>
+                <th scope="col">Create At</th>
+                <th scope="col">ID</th>
+                <th>Click To Update</th>
+            </tr>
+            </thead>
 
-        <h1> HomePage! </h1>
+            <tbody>
+                {% if records %}
+                    {% for record in records %}
+                        <tr>
+                            <td>{{ record.first_name }} {{ record.last_name }}</td>
+                            <td>{{ record.email }}</td>
+                            <td>{{ record.phone }}</td>
+                            <td>{{ record.address }}</td>
+                            <td>{{ record.city }}</td>
+                            <td>{{ record.state }}</td>
+                            <td>{{ record.zipcode }}</td>
+                            <td>{{ record.created_at }}</td>
+                            <td>{{ record.id }}</td>
+                            <td><a href="{% url 'record' record.id %}"> Link to Update </a></td>
+                        </tr>
+                    {% endfor %}
+                {% endif %}
+            </tbody>
+        </table>
 
     {% else %}
 
@@ -33,7 +66,7 @@
         </form>
 
     {% endif %}
-    </div>
+    <!-- </div> -->
 
 
 {% endblock content %}
